GNOME Bugzilla – Bug 708827
prevent redefinitions
Last modified: 2013-10-14 13:31:45 UTC
Created attachment 255818 [details] [review] prevent redefinitions Hi. On OpenBSD building seahorse 3.10.0 fails with: cc -DHAVE_CONFIG_H -I. -I../build -I.. -I.. -I../common -I../libegg -pthread -I/usr/local/include/gcr-3 -I/usr/local/include/gtk-3.0 -I/usr/local/include/at-spi2-atk/2.0 -I/usr/local/include/gio-unix-2.0/ -I/usr/X11R6/include -I/usr/local/include/cairo -I/usr/local/include/pango-1.0 -I/usr/local/include/harfbuzz -I/usr/local/include/atk-1.0 -I/usr/X11R6/include/pixman-1 -I/usr/X11R6/include/freetype2 -I/usr/local/include/libpng16 -I/usr/local/include/gdk-pixbuf-2.0 -I/usr/local/include/gck-1 -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -I/usr/local/include/p11-kit-1 -DGCR_API_SUBJECT_TO_CHANGE -DGCK_API_SUBJECT_TO_CHANGE -I/usr/local/include -I/usr/local/include/libsoup-2.4 -I/usr/local/include/libxml2 -I/usr/local/include -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -DSECRET_WITH_UNSTABLE -I/usr/local/include/libsecret-1 -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -pthread -D_REENTRANT -I/usr/local/include -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include/gck-1 -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -I/usr/local/include/p11-kit-1 -DPKGDATADIR="/usr/local/share/seahorse/" -DDATA_DIR="/usr/local/share" -DSEAHORSE_UIDIR="/usr/local/share/seahorse/ui/" -DLOCALEDIR="/usr/local/share/locale" -DEXECDIR="/usr/local/lib/seahorse/" -I/usr/local/include -Wall -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Wcast-align -Wsign-compare -O2 -pipe -I../build -g -Wno-strict-aliasing -Wno-sign-compare -MT seahorse-collection.lo -MD -MP -MF .deps/seahorse-collection.Tpo -c seahorse-collection.c -fPIC -DPIC -o .libs/seahorse-collection.o In file included from seahorse-predicate.h:26, from seahorse-collection.h:28, from seahorse-collection.c:24: seahorse-object.h:55: error: redefinition of typedef 'SeahorsePlace' ../common/seahorse-common.h:63: error: previous declaration of 'SeahorsePlace' was here <...> cc -DHAVE_CONFIG_H -I. -I../build -I.. -I.. -I../common -I../libegg -pthread -I/usr/local/include/gcr-3 -I/usr/local/include/gtk-3.0 -I/usr/local/include/at-spi2-atk/2.0 -I/usr/local/include/gio-unix-2.0/ -I/usr/X11R6/include -I/usr/local/include/cairo -I/usr/local/include/pango-1.0 -I/usr/local/include/harfbuzz -I/usr/local/include/atk-1.0 -I/usr/X11R6/include/pixman-1 -I/usr/X11R6/include/freetype2 -I/usr/local/include/libpng16 -I/usr/local/include/gdk-pixbuf-2.0 -I/usr/local/include/gck-1 -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -I/usr/local/include/p11-kit-1 -DGCR_API_SUBJECT_TO_CHANGE -DGCK_API_SUBJECT_TO_CHANGE -I/usr/local/include -I/usr/local/include/libsoup-2.4 -I/usr/local/include/libxml2 -I/usr/local/include -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -DSECRET_WITH_UNSTABLE -I/usr/local/include/libsecret-1 -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -pthread -D_REENTRANT -I/usr/local/include -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include/gck-1 -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -I/usr/local/include/p11-kit-1 -DPKGDATADIR="/usr/local/share/seahorse/" -DDATA_DIR="/usr/local/share" -DSEAHORSE_UIDIR="/usr/local/share/seahorse/ui/" -DLOCALEDIR="/usr/local/share/locale" -DEXECDIR="/usr/local/lib/seahorse/" -I/usr/local/include -Wall -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Wcast-align -Wsign-compare -O2 -pipe -I../build -g -Wno-strict-aliasing -Wno-sign-compare -MT seahorse-key-manager-store.lo -MD -MP -MF .deps/seahorse-key-manager-store.Tpo -c seahorse-key-manager-store.c -fPIC -DPIC -o .libs/seahorse-key-manager-store.o In file included from seahorse-key-manager-store.c:27: seahorse-util.h:37: error: conflicting types for 'seahorse_util_get_display_date_string' ../common/seahorse-common.h:423: error: previous declaration of 'seahorse_util_get_display_date_string' was here
Any thoughts about this patch?