Prevent some redefinitions.

https://bugzilla.gnome.org/show_bug.cgi?id=708827